fix(testimonials): remove horizontal scrollbar

--- a/assets/section-testimonials.css
+++ b/assets/section-testimonials.css
@@ -38,6 +38,7 @@
   /* flex-wrap: wrap; */
   justify-content: space-around;
   overflow-x: scroll;
+  scrollbar-width: none;
   -webkit-overflow-scrolling: touch;
 }
 
